--- a/kakao/src/css/main.css
+++ b/kakao/src/css/main.css
@@ -1,7 +1,8 @@
 * {
   padding: 0;
   margin: 0;
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 html,
@@ -13,8 +14,6 @@ button {
   border: none;
   background: none;
   cursor: pointer;
-  // outline: none;
-  // background-color: transparent;
 }
 
 ul,
